# mcp-server

./: .env  .env.example  Dockerfile  README.md  config.py  main.py  mcp.json  pyproject.toml
app/: main.py
app/core/: config.py  constants.py
app/exceptions/: exception_handler.py
app/helpers/: credentials.py  http_client.py  logging_config.py
app/middleware/: Authentication_middleware.py  logging_middleware.py
app/models/: token_data.py
app/services/: billing_service.py  compute_offerings_service.py  http_client.py  token_service.py
app/tools/: compute_offerings_tool.py  compute_tools.py  greetings.py  loader.py  vpn_tools.py
core/: __init__.py
src/mcp_server_stdio/: main.py
src/mcp_server_stdio/exceptions/: custom_exceptions.py
src/mcp_server_stdio/helpers/: credentials.py
