[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.13.1",
    "httpx>=0.28.1",
    "keyring>=25.7.0",
    "mcp>=1.21.2",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "starlette>=0.50.0",
]
[project.scripts]
mcp-service = "app.main:run"