[project]
name = "mcp-server-stdio"
version = "0.1.3"
description = "MCP Server for Claude / Stdio transport"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.13.1",
    "httpx>=0.28.1",
    "mcp>=1.21.2",
    "python-dotenv>=1.2.1",
]

[project.scripts]
mcp-server-stdio = "mcp_server_stdio.main:run"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
